--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "preview": "vite preview --port 5173",
-    "server": "json-server --watch db.json --port 5174 --delay 400"
+    "server": "json-server --watch db.json --port 5174 --delay 400",
+     "server:render": "json-server --watch db.json --host 0.0.0.0 --port $PORT --delay 400"
   },
   "dependencies": {
     "@headlessui/react": "^2.1.10",
     "@hookform/resolvers": "^3.9.0",
+    
     "@tanstack/react-query": "^5.51.1",
     "axios": "^1.7.7",
     "lucide-react": "^0.453.0",
